--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ body{
     display: flex;
     flex-direction: column;
     font-size: 50px;
-    justify-content: left;
+    
     align-items: center;
  }  
 
@@ -235,14 +235,7 @@ flex: 1;
 	
 
 }
-.input[type=text],select,textarea{
-	width: 40%;
-	margin-top: 8px
-	margin-bottom:16px;
-	resize: vertical;
-	border-radius: 4px;
-	box-sizing:border-box;
-}
+
 .map{
 	width: 100%;
 	height: 400px;
@@ -252,15 +245,15 @@ flex: 1;
 	animation-duration: 1s;
 }
 
-@keyframes{
+@keyframes inputbox{
 	from{width: 40%}
 	to{width: 60%}
 }
 
-}
-@media  only screen and(min-width:720px) {
-	.column,input[type=submit]{
-		width: 100%
+
+@media  only screen and (min-width:720px) {
+	.column{
+		width: 100%;
 		margin-top:0;
 	}
 
