--- a/main.css
+++ b/main.css
@@ -37,22 +37,16 @@ body{
     top: 0;
     left: 0;
     background-color: #111;
-    overflow-y: hidden;
+    overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-    display: flex;
-    flex-direction: column;
+    
     font-size: 50px;
     
     align-items: center;
  }  
 
-.header-second ul{
-	list-style: none;
-	
-	display: flex;
-	justify-content: space-around;
-}
+
 .header-second ul a{
 	text-decoration: none;
 	font-size: 1.3em;
@@ -215,7 +209,7 @@ flex: 1;
 	flex-direction: column;
 	justify-content: space-around;
 	background-color: skyblue;
-	border-radius: 5px;
+	border-radius: 2px;
 	width: 100%;
 	height: 400px;
 }
@@ -243,6 +237,7 @@ flex: 1;
 .input1{
 	animation-name: inputbox;
 	animation-duration: 1s;
+	animation-fill-mode: forwards;
 }
 
 @keyframes inputbox{
@@ -250,10 +245,10 @@ flex: 1;
 	to{width: 60%}
 }
 
-
+} 
 @media  only screen and (min-width:720px) {
 	.column{
-		width: 100%;
+		width: 100%
 		margin-top:0;
 	}
 
