--- a/main.css
+++ b/main.css
@@ -40,9 +40,10 @@ body{
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-    
+    display: flex;
+    justify-content: center;
     font-size: 50px;
-    
+    flex-direction: column;
     align-items: center;
  }  
 
@@ -245,10 +246,10 @@ flex: 1;
 	to{width: 60%}
 }
 
-} 
+
 @media  only screen and (min-width:720px) {
 	.column{
-		width: 100%
+		width: 100%;
 		margin-top:0;
 	}
 
